Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24794

VALBLK::MoveNull does not make any changes

Details

    Description

      /storage/connect/valblk.h

                void   MoveNull(int i, int j)
                        {if (To_Nulls) To_Nulls[j] = To_Nulls[j];}
      

      Note, j is used as an index both times, so we copy To_Nulls value to itself instead of moving.
      Should be:

                void   MoveNull(int i, int j)
                        {if (To_Nulls) To_Nulls[j] = To_Nulls[i];}
      

      Attachments

        Issue Links

          Activity

            People

              bertrandop Olivier Bertrand
              yury.chaikou Yury Chaikou
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.