- Fix(?) Linux compile errors   modified:   storage/connect/tabrest.cpp   modified:   storage/connect/CMakeLists.txt

-fix MDEV-24794
 modified:   storage/connect/valblk.h